--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>edithtml</title>
+    <title>首页自定义装扮-<?=$roominfo['crname']?><?=!empty($roominfo['subtitle']) ?' - '. $roominfo['subtitle'] : ''?></title>
+    <?php if (!empty($roominfo['favicon'])) {?><link rel="shortcut icon" href="<?=$roominfo['favicon']?>" mce_href="<?=$roominfo['favicon']?>" type="image/x-icon"><?php }?>
     <script type="text/javascript" charset="utf-8" src="/static/ueditor/ueditor.config.js"></script>
     <script type="text/javascript" charset="utf-8" src="/static/ueditor/ueditor.all.min.js"> </script>   
     <script type="text/javascript" charset="utf-8" src="/static/ueditor/lang/zh-cn/zh-cn.js"></script>
