--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html style="font-size:37.5px;">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>首页自定义装扮-<?=$roominfo['crname']?><?=!empty($roominfo['subtitle']) ?' - '. $roominfo['subtitle'] : ''?></title>
     <?php if (!empty($roominfo['favicon'])) {?><link rel="shortcut icon" href="<?=$roominfo['favicon']?>" mce_href="<?=$roominfo['favicon']?>" type="image/x-icon"><?php }?>
     <script type="text/javascript" charset="utf-8" src="/static/ueditor/ueditor.config.js"></script>
